syntax = "proto3";

service Order {
  rpc GetUserOrderList(UserRequest) returns (OrdersResponse);
}

message UserRequest {
   uint64 user_id = 1;
}

message OrdersResponse {
  message  Order {
    uint64 user_id = 1;
    uint64 order_id = 2;
    double price = 3;
    uint32  status = 4;
    string  created_dt = 5;
    string  updated_dt = 6;
  }
  repeated Order orders = 1;
}

